...
  });

  return (
    <SafeAreaView edges={['top', 'left', 'right']} style={styles.safeArea}>
      <ScrollView
        contentContainerStyle={styles.content}
        testID="dashboard-screen"
        refreshControl={
          <RefreshControl
            colors={[colors.positive]}
            onRefresh={handleRefresh}
            refreshing={overviewQuery.isRefetching}
            tintColor={colors.positive}
...
